--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-native": "^4.0.0"
   },
+  "overrides": {
+    "react-devtools-core": "~4.25.0"
+  },
   "private": true
 }
