--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-paper": "^5.1.3",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.4.4",
     "yup": "^0.32.11"
